# llvm-obfuscation-playground

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
lib/: CMakeLists.txt
lib/FunctionOutliner/: CMakeLists.txt  source.cpp
lib/Goron/: BogusControlFlow.cpp  CMakeLists.txt  Flattening.cpp  Plugin.cpp  SplitBasicBlock.cpp
lib/Hikari/: AntiClassDump.cpp  AntiHooking.cpp  BogusControlFlow.cpp  CMakeLists.txt  ConstantEncryption.cpp  CryptoUtils.cpp  Flattening.cpp  FunctionCallObfuscate.cpp  FunctionWrapper.cpp  IndirectBranch.cpp  Obfuscation.cpp  Plugin.cpp  StringEncryption.cpp
lib/Loyalty/: AddOutliner.cpp  AddOutliner.h  CMakeLists.txt  Plugin.cpp  StackString.cpp  StackString.h  Utils.cpp
lib/StaticAnalyzer/: CMakeLists.txt  HelloWorld.cpp
